--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<span class="image main"><img src="images/contact-me.svg" alt="" /></span>
-								<form method="post" action="#">
+								<form method="post" action="send-email.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="demo-name">Your Name</label>
